--- a/XamarinSpikes/MvvmCrossSpikes/MvvmCrossSpikes.Droid/packages.config
+++ b/XamarinSpikes/MvvmCrossSpikes/MvvmCrossSpikes.Droid/packages.config
@@ -5,4 +5,6 @@
   <package id="MvvmCross.HotTuna.MvvmCrossLibraries" version="3.1.1" targetFramework="MonoAndroid22" />
   <package id="MvvmCross.HotTuna.StarterPack" version="3.1.1" targetFramework="MonoAndroid22" />
   <package id="MvvmCross.PortableSupport" version="3.1.1" targetFramework="MonoAndroid22" />
+  <package id="Xamarin.Android.Support.v4" version="19.0.2" targetFramework="MonoAndroid22" />
+  <package id="Xamarin.Forms" version="1.0.6186" targetFramework="MonoAndroid22" />
 </packages>
